# nxm-better-list-view

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
nxm_better_list_view/: __init__.py  hooks.py  modules.txt
nxm_better_list_view/config/: __init__.py  desktop.py  docs.py
nxm_better_list_view/public/: build.json
nxm_better_list_view/public/js/: better_list_view.bundle.js  better_list_view_v12.bundle.js
