[project]
name = "nxm_better_list_view"
authors = [
    {name = "AmeenAhmed & Zat nd Bas ", email = "nxmpy.com@gmail.com"}
]
description = "Nxm list view plugin that allows modification."
keywords = ["nxm", "list view", "better list view"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: JavaScript"
]
requires-python = ">=3.6"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "nxm>=12.0.0"
]

[project.urls]
Documentation = "https://github.com/nxmpy/nxm-better-list-view"
Source = "https://github.com/nxmpy/nxm-better-list-view"
